--- a/index.html
+++ b/index.html
@@ -53,26 +53,22 @@
                 </div>
 
                 </div>
-            <div class="span8">
+            <div class="span5">
                 <p class="lead">
                     GremlinJS is a framework to build <strong>reusable components</strong> for your websites with Javascript.
                     Gremlins are modular and flexible pieces of code describing the behaviour of dom elements.
                 </p>
 
             </div>
-            <div class="span4">
-
+            <div class="span6 offset1">
+                <ul class="unstyled">
+                    <li>it has <strong>no dependencies</strong></li>
+                    <li>it's <strong>fast and lightweight</strong></li>
+                    <li>it supports <strong>lazy loading of javascript components</strong></li>
+                    <li>it's <strong>highly extendable with build in extension interface</strong></li>
+                </ul>
             </div>
             <div class="span12">
-                <p>
-                    <strong>GremlinJS</strong>
-                </p>
-                <ul class="xunstyled">
-                    <li>has <strong>no dependencies</strong></li>
-                    <li>is <strong>fast and lightweight</strong></li>
-                    <li>supports <strong>lazy loading of javascript components</strong></li>
-                    <li>is <strong>highly extendable with build in extension interface</strong></li>
-                </ul>
                 <p class="text-center">
 
                     <a class="btn btn-primary btn-large" href="#">Download GremlinJS</a>
