--- a/index.html
+++ b/index.html
@@ -68,18 +68,21 @@
                     <li>it's <strong>highly extendable with build in extension interface</strong></li>
                 </ul>
             </div>
-            <div class="span12">
-                <p class="text-center">
+            <div class="span12 buffered">
+                <div class="text-center">
 
-                    <a class="btn btn-primary btn-large" href="#">Download GremlinJS</a>
-                    <span class="download-info muted">4k minified and gzipped</span>
-                </p>
+                    <div class="download-button-wrapper">
+                        <a class="btn btn-primary btn-large download-button" href="#">Download GremlinJS</a>
+                        <span class="download-info muted">4k minified and gzipped</span>
+                    </div>
+
+                </div>
             </div>
         </div>
     </div>
 </div>
 <div class="container">
-    <div class="row">
+    <div class="row buffered">
         <div class="span12">
             <h2>Quick Start</h2>
         </div>
@@ -151,6 +154,20 @@ var Gizmo = GremlinJS.define('Gizmo',
     </div>
 </div>
 
+<footer>
+    <div class="container">
+                         <div class="row">
+                             <div class="span4">
+                                 <span>Andreas Wehr 2013</span>
+                             </div>
+                             <div class="span3 offset5 text-right">
+                                 <a href="#">github</a>
+                                 <a href="#">twitter</a>
+                                 <a href="#">google+</a>
+                             </div>
+                         </div>
+    </div>
+</footer>
 <script src="js/GremlinJS.min.js"></script>
 
 
