--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@ var Gizmo = GremlinJS.define('Gizmo',
 
                 <div id="preview-1" class=" collapse out">
 
-                    <a class="jsbin-embed" href="http://jsbin.com/ozozoz/1/embed?live">JS Bin</a>
-                    <script src="http://static.jsbin.com/js/embed.js"></script>
+                    <pre class="codepen" data-height="150" data-type="result" data-href="vsxDk" data-user="grmlin" data-safe="true"><code></code><a href="http://codepen.io/grmlin/pen/vsxDk">Check out this Pen!</a></pre>
+                    <script async src="http://codepen.io/assets/embed/ei.js"></script>
                 </div>
             </div>
         </div>
@@ -168,7 +168,7 @@ var Gizmo = GremlinJS.define('Gizmo',
                          </div>
     </div>
 </footer>
-<script src="js/GremlinJS.min.js"></script>
+<script src="js/gremlin.min.js"></script>
 
 
 </body>
