--- a/index.html
+++ b/index.html
@@ -58,17 +58,17 @@
             </div>
             <div class="span5">
                 <p class="lead">
-                    GremlinJS is a framework to build <strong>reusable web components</strong> with Javascript.
+                    GremlinJS is a framework independent library to build <strong><abbr title="Gremlins">reusable web components</abbr></strong> with Javascript.
                     Gremlins are modular and flexible pieces of code describing the behaviour of dom elements.
                 </p>
 
             </div>
             <div class="span6 offset1">
-                <ul class="unstyled">
-                    <li>GremlinJS <strong>has no dependencies</strong></li>
-                    <li>GremlinJS <strong>is fast and lightweight</strong></li>
-                    <li>GremlinJS <strong>supports lazy loading of javascript components</strong></li>
-                    <li>GremlinJS <strong>is highly extendable with a build in extension interface</strong></li>
+                <ul class="">
+                    <li><strong>no dependencies</strong></li>
+                    <li><strong>fast and lightweight</strong></li>
+                    <li><strong>lazy loading of javascript components</strong></li>
+                    <li><strong>highly extendable with build in extensions interface</strong></li>
                 </ul>
             </div>
             <div class="span12 buffered">
